# SmartSim-Scaling

./: .gitignore  PERFORMANCE.md  README.md  driver.py  plot_colocated_inference.ipynb  process_results.py  requirements.txt  throughput-plotter.py  utils.py
batch_scripts/: run_aggregation_python_fs_slurm.sh  run_aggregation_python_slurm.sh  run_aggregation_slurm.sh  run_colo_slurm.sh  run_inference_colo_slurm.sh  run_inference_standard_slurm.sh  run_standard_slurm.sh  run_throughput_pbs.sh  run_throughput_slurm.sh  slurm-2031233.out
cpp-data-aggregation/: CMakeLists.txt  aggregation_consumer.cpp  aggregation_producer.cpp  aggregation_scaling.cpp
cpp-inference/: CMakeLists.txt  README.md  driver.py  inference_scaling.cpp  inference_scaling_imagenet.cpp  process_results.py  resnet_maker.py  run-inference-session-imagenet.py  run-inference-session.py  run.sh
cpp-inference/utils/: resnet_maker.py
cpp-py-data-aggregation/db/: CMakeLists.txt  aggregation_consumer.py  aggregation_producer.cpp
cpp-py-data-aggregation/fs/: CMakeLists.txt  aggregation_consumer.py  aggregation_producer.cpp
cpp-throughput/: CMakeLists.txt  README.md  driver.py  process_results.py  throughput_scaling.cpp
data-aggregation/: main.py
dataaggregation/: main.py
driver-process-results/: process_results.py
driver/aggregation-python-fs/: aggregation-fs-guide.rst
driver/inference-colocated/: inference-colocated-guide.rst
driver/inference-standard/: inference-standard-guide.rst
driver/throughput-standard/: throughput-standard-guide.rst
driverdataaggregation/: DataAgg-README.md  README.md  main.py  readme.md
driverinference/: README.md  inference-README.md  main.py  readme.md
driverprocessresults/: README.md  aggregation_plotter.py  inference_plotter.py  main.py  process-results.md  readme.md  scaling_plotter.py  throughput_plotter.py
driverthroughput/: README.md  Throughput-README.md  main.py  readme.md
figures/: aggregation-plots.ipynb  plot_colocated_inference.ipynb  plot_inference.ipynb  plots.ipynb  requirements-nb.txt  throughput-plotter.py
fortran-inference/: CMakeLists.txt  inference_scaling_imagenet.F90  utils.F90
imagenet/: .gitattributes  model_saver.py  model_saver_cpu.py  resnet50-1.7.0.pt
inference/: main.py
mnist/mnist_data/: mnist_cnn.pt
mnist/mnist_data_gpu/: mnist_cnn_gpu.pt
py-data-aggregation/db/: CMakeLists.txt  aggregation_consumer.py  aggregation_producer.cpp
py-data-aggregation/fs/: CMakeLists.txt  aggregation_consumer.py  aggregation_producer.cpp
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/: run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-cons-python-cpp-N128-T32-DBN0-ITER100-TB1024-TPD4-CT32-9915/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-cons-python-cpp-N16-T32-DBN0-ITER100-TB1024-TPD4-CT32-bc3c/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-cons-python-cpp-N32-T32-DBN0-ITER100-TB1024-TPD4-CT32-d43b/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-cons-python-cpp-N4-T32-DBN0-ITER100-TB1024-TPD4-CT32-40b1/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-cons-python-cpp-N64-T32-DBN0-ITER100-TB1024-TPD4-CT32-9cf9/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-cons-python-cpp-N8-T32-DBN0-ITER100-TB1024-TPD4-CT32-f599/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-prod-for-python-consumer-file-system-cpp-N128-T32-DBN0-ITER100-TB1024-TPD4-daaf/: run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-prod-for-python-consumer-file-system-cpp-N16-T32-DBN0-ITER100-TB1024-TPD4-c690/: run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-prod-for-python-consumer-file-system-cpp-N32-T32-DBN0-ITER100-TB1024-TPD4-554b/: run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-prod-for-python-consumer-file-system-cpp-N4-T32-DBN0-ITER100-TB1024-TPD4-c8fc/: run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-prod-for-python-consumer-file-system-cpp-N64-T32-DBN0-ITER100-TB1024-TPD4-4a33/: run.cfg
results/aggregation-standard-scaling-py-fs/run-2023-07-20-15:56:58/aggregate-sess-prod-for-python-consumer-file-system-cpp-N8-T32-DBN0-ITER100-TB1024-TPD4-2d2e/: run.cfg
results/aggregation-standard-scaling-py/run-2023-07-20-14:51:41/: run.cfg
results/aggregation-standard-scaling-py/run-2023-07-20-14:51:41/aggregate-sess-cons-python-cpp-N128-T32-DBN16-ITER100-TB1024-TPD4-CT32-678b/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py/run-2023-07-20-14:51:41/aggregate-sess-cons-python-cpp-N128-T32-DBN4-ITER100-TB1024-TPD4-CT32-21c5/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py/run-2023-07-20-14:51:41/aggregate-sess-cons-python-cpp-N128-T32-DBN8-ITER100-TB1024-TPD4-CT32-1b22/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py/run-2023-07-20-14:51:41/aggregate-sess-cons-python-cpp-N16-T32-DBN16-ITER100-TB1024-TPD4-CT32-cb0f/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py/run-2023-07-20-14:51:41/aggregate-sess-cons-python-cpp-N16-T32-DBN4-ITER100-TB1024-TPD4-CT32-0557/: rank_0_timing.csv  run.cfg
results/aggregation-standard-scaling-py/run-2023-07-20-14:51:41/database/: orchestrator.err  (+18 more)
results/aggregation-standard-scaling/run-2023-07-20-14:04:10/: run.cfg
results/aggregation-standard-scaling/stats/: aggregation-standard-scaling-2023-07-25.csv
results/inference-standard-scaling/run-2023-08-12-21:00:18/: run.cfg
results/inference-standard-scaling/run-2023-08-12-21:12:00/: run.cfg
results/throughput-colocated-scaling/run-2023-08-07-10:03:47/: run.cfg
throughput/: main.py
(+2388 files in other folders)
